# sumcheck

./: .gitignore  analysis.ipynb  benchmark.sh  meson.build
src/: counting_triangles_prover.c  counting_triangles_prover.h  counting_triangles_verifier.c  counting_triangles_verifier.h  graph.c  graph.h  lagrange.c  lagrange.h  main.c  mat_mult_prover.c  mat_mult_prover.h  mat_mult_verifier.c  mat_mult_verifier.h  matrix.c  matrix.h  modulo.c  modulo.h  vector.c  vector.h
